[gd_scene load_steps=32 format=3 uid="uid://b0u1xks6d8yqu"]

[ext_resource type="Script" path="res://Menu/MenuDrone/drone_menu.gd" id="1_fjay7"]
[ext_resource type="Texture2D" uid="uid://dmtwxmr35ttt0" path="res://Assets/Drones/drone_sniper.png" id="2_23f53"]
[ext_resource type="Texture2D" uid="uid://d4ldj1t153brp" path="res://Assets/Menu/UI/background_lvlUp.png" id="2_m32j3"]
[ext_resource type="Theme" uid="uid://50iviqkumbty" path="res://level_up_menu.tres" id="3_e2m2o"]
[ext_resource type="Texture2D" uid="uid://nw7irvhyy71s" path="res://Assets/PowerUp/drone_normal.png" id="3_s27ko"]
[ext_resource type="FontFile" uid="uid://b240a7o38ytat" path="res://Assets/Font/Board of Directors W00 Book.ttf" id="4_sw3hw"]
[ext_resource type="Texture2D" uid="uid://bo6vv8qrtblms" path="res://Assets/Drones/ico_drone_melee.png" id="4_y15rs"]
[ext_resource type="Script" path="res://Scenes/LabelSize.gd" id="5_v12w1"]
[ext_resource type="Theme" uid="uid://8frpm2jt14xa" path="res://lvlUpButton.tres" id="6_vacu5"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bjbwu"]
load_path = "res://.godot/imported/button_lvlUp.png-a792d24cbe95c532f540983d9a5cbf70.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wki6w"]
texture = SubResource("CompressedTexture2D_bjbwu")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vugw4"]
load_path = "res://.godot/imported/button_lvlUp.png-a792d24cbe95c532f540983d9a5cbf70.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c8415"]
texture = SubResource("CompressedTexture2D_vugw4")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4byhs"]
load_path = "res://.godot/imported/button_lvlUp.png-a792d24cbe95c532f540983d9a5cbf70.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q7tqp"]
texture = SubResource("CompressedTexture2D_4byhs")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vxudg"]
load_path = "res://.godot/imported/button_lvlUp.png-a792d24cbe95c532f540983d9a5cbf70.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lpinq"]
texture = SubResource("CompressedTexture2D_vxudg")

[sub_resource type="Theme" id="Theme_2fk3p"]
/styles/panel = SubResource("StyleBoxTexture_wki6w")
Button/fonts/font = ExtResource("4_sw3hw")
Button/styles/hover = SubResource("StyleBoxTexture_c8415")
Button/styles/normal = SubResource("StyleBoxTexture_q7tqp")
Button/styles/pressed = SubResource("StyleBoxTexture_lpinq")

[sub_resource type="LabelSettings" id="LabelSettings_0531o"]
font = ExtResource("4_sw3hw")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_n71al"]
load_path = "res://.godot/imported/button_lvlUp.png-a792d24cbe95c532f540983d9a5cbf70.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_817fd"]
texture = SubResource("CompressedTexture2D_n71al")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hcd3o"]
load_path = "res://.godot/imported/button_lvlUp2.png-b8cbdb9ad7b6fc6198d13c42d4f30d7c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cl6xx"]
texture = SubResource("CompressedTexture2D_hcd3o")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kn62o"]
load_path = "res://.godot/imported/button_lvlUp2.png-b8cbdb9ad7b6fc6198d13c42d4f30d7c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l613w"]
texture = SubResource("CompressedTexture2D_kn62o")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_k156y"]
load_path = "res://.godot/imported/button_lvlUp2.png-b8cbdb9ad7b6fc6198d13c42d4f30d7c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y6xj4"]
texture = SubResource("CompressedTexture2D_k156y")

[sub_resource type="Theme" id="Theme_whg58"]
/styles/panel = SubResource("StyleBoxTexture_817fd")
Button/fonts/font = ExtResource("4_sw3hw")
Button/styles/hover = SubResource("StyleBoxTexture_cl6xx")
Button/styles/normal = SubResource("StyleBoxTexture_l613w")
Button/styles/pressed = SubResource("StyleBoxTexture_y6xj4")

[sub_resource type="LabelSettings" id="LabelSettings_o2acj"]
font = ExtResource("4_sw3hw")

[sub_resource type="ViewportTexture" id="ViewportTexture_62o3m"]

[sub_resource type="LabelSettings" id="LabelSettings_28o8x"]
font = ExtResource("4_sw3hw")

[node name="DroneMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fjay7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 8.0
offset_right = 1052.0
offset_bottom = 809.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.28, 0.235)
texture = ExtResource("2_m32j3")

[node name="PanelContainer2" type="PanelContainer" parent="."]
offset_left = 75.0
offset_top = 24.0
offset_right = 466.0
offset_bottom = 280.0
scale = Vector2(0.834034, 1.02145)
theme = ExtResource("3_e2m2o")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0

[node name="Choice1" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_2fk3p")
text = "Sniper Drone

"

[node name="Label2" type="Label" parent="PanelContainer2/VBoxContainer/Choice1"]
layout_mode = 0
offset_left = 63.5465
offset_top = 17.3203
offset_right = 410.547
offset_bottom = 40.3203
scale = Vector2(0.929021, 0.921678)
text = "Subtitle"
label_settings = SubResource("LabelSettings_0531o")
autowrap_mode = 2
script = ExtResource("5_v12w1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer2/VBoxContainer/Choice1"]
offset_left = 16.7859
offset_top = 6.55129
offset_right = 56.7859
offset_bottom = 46.5513
scale = Vector2(0.767271, 0.677426)
texture = ExtResource("2_23f53")

[node name="Choice2" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_whg58")
text = "Turet Drone

"

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer/Choice2"]
layout_mode = 0
offset_left = 63.5465
offset_top = 18.3125
offset_right = 413.547
offset_bottom = 43.3125
scale = Vector2(0.856122, 0.836229)
text = "Subtitle"
label_settings = SubResource("LabelSettings_o2acj")
clip_text = true
script = ExtResource("5_v12w1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer2/VBoxContainer/Choice2"]
offset_left = 16.7859
offset_top = 7.54349
offset_right = 56.7859
offset_bottom = 47.5435
scale = Vector2(0.767271, 0.677426)
texture = ExtResource("3_s27ko")

[node name="Choice3" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_vacu5")
text = "Melee Drone

"
icon = SubResource("ViewportTexture_62o3m")

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer/Choice3"]
layout_mode = 0
offset_left = 63.5465
offset_top = 16.3677
offset_right = 413.547
offset_bottom = 41.3677
scale = Vector2(0.907512, 0.882519)
text = "Subtitle"
label_settings = SubResource("LabelSettings_28o8x")
script = ExtResource("5_v12w1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer2/VBoxContainer/Choice3"]
offset_left = 17.9849
offset_top = 11.4727
offset_right = 57.9849
offset_bottom = 51.4727
scale = Vector2(0.671352, 0.481629)
texture = ExtResource("4_y15rs")

[connection signal="pressed" from="PanelContainer2/VBoxContainer/Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/Choice2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/Choice3" to="." method="_on_choice_3_pressed"]
